force-app/main/default/objects/Functionality_switch__c/Functionality_switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to allow turn off selected functionalities (like flows): 
When given field for functionality is &quot;checked&quot; then it is deactivated.</description>
    <label>Functionality switch</label>
</CustomObject>