force-app/main/default/objects/Functionality_switch__c/fields/PB_Add_Suppliers_to_Procurement__c.field-meta.xml
<CustomField>
    <fullName>PB_Add_Suppliers_to_Procurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB_Add_Suppliers_to_Procurement</label>
    <type>Checkbox</type>
</CustomField>