force-app/main/default/objects/Functionality_switch__c/fields/PB_Send_case_owner_change_notification_e__c.field-meta.xml
<CustomField>
    <fullName>PB_Send_case_owner_change_notification_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB_Send_case_owner_change_notification_e</label>
    <type>Checkbox</type>
</CustomField>