force-app/main/default/objects/Functionality_switch__c/fields/PB_Stop_Start_the_SLA_clock__c.field-meta.xml
<CustomField>
    <fullName>PB_Stop_Start_the_SLA_clock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PB_Stop_Start_the_SLA_clock</label>
    <type>Checkbox</type>
</CustomField>